deploy/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: foodsea
  labels:
    app.kubernetes.io/part-of: foodsea
